# Chess-Engine

./: .gitignore  API.c  API.h  CMakeLists.txt  LICENSE  UIManager.c  UIManager.h  chessGame.py  consts.h  game.c  game.h  main.c  memoryUtils.c  memoryUtils.h  movementManager.c  movementManager.h  positionManager.c  positionManager.h  test.py  wrapper.c
.github/workflows/: cmake-multi-platform.yml
